<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".BootscreenActivity">

    <!-- New LinearLayout for App Logo, Name, Version, and ProgressBar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="8dp">

        <!-- App Logo -->
        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:src="@drawable/cnrgi_logo"
            android:contentDescription="@string/app_logo"
            android:layout_marginBottom="8dp" />
        <!-- App Name -->
        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp" />

        <!-- App Version -->
        <TextView
            android:id="@+id/app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_version"
            android:textColor="#666666"
            android:textSize="12sp"
            android:layout_marginBottom="8dp" />
        <!-- Progress Bar -->
        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="visible" />
    </LinearLayout>
        <TextView
            android:id="@+id/footer_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Powered by CNRGi"
            android:textColor="#999999"
            android:textSize="10sp"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="16dp" />

</FrameLayout>