<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical" > 

    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        android:padding="5dp" >  
        <TextView 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" 
            android:layout_marginLeft="20dp" 
            android:layout_marginRight="20dp"  
            android:gravity="right"
            android:textSize="18sp"
            android:text="@string/system_version" /> 
        <TextView
            android:id="@+id/system_version"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" 
            android:layout_marginRight="20dp" 
            android:textSize="16sp" />
    </LinearLayout>   
    <View android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="#474747" /> 
	        
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        android:padding="5dp" >  
        <TextView 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" 
            android:layout_marginLeft="20dp" 
            android:layout_marginRight="20dp"  
            android:gravity="right"

            android:textSize="18sp"
            android:text="@string/kernel_version" /> 
        <TextView
            android:id="@+id/kernel_version"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" 
            android:layout_marginRight="20dp" 

            android:textSize="16sp" /> 
    </LinearLayout>   
    <View android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="#474747" /> 
	        
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        android:padding="5dp" >  
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" 
            android:layout_marginLeft="20dp" 
            android:layout_marginRight="20dp"  
            android:gravity="right"

            android:textSize="18sp"
            android:text="@string/api_version" /> 
        <TextView
            android:id="@+id/api_version"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" 
            android:layout_marginRight="20dp" 

            android:textSize="16sp" /> 
    </LinearLayout>   
    <View android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="#474747" /> 
	        
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        android:padding="5dp" >  
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" 
            android:layout_marginLeft="20dp" 
            android:layout_marginRight="20dp"  
            android:gravity="right"

            android:textSize="18sp"
            android:text="@string/running_memory" /> 
        <TextView
            android:id="@+id/running_memory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" 
            android:layout_marginRight="20dp" 

            android:textSize="16sp" /> 
    </LinearLayout>   
    <View 
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="#474747" /> 

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        android:padding="5dp" >  
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" 
            android:layout_marginLeft="20dp" 
            android:layout_marginRight="20dp"  
            android:gravity="right"

            android:textSize="18sp"
            android:text="@string/eth0_mac" />
        <TextView
            android:id="@+id/eth0_mac"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" 
            android:layout_marginRight="20dp" 

            android:textSize="16sp" /> 
    </LinearLayout>   
    <View 
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="#474747" /> 
	        
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        android:padding="5dp" >  
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"  
            android:gravity="right"
            android:layout_weight="1" 
            android:layout_marginLeft="20dp" 

            android:textSize="18sp"
            android:text="@string/wlan0_mac" /> 
        <TextView
            android:id="@+id/wlan0_mac"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" 
            android:layout_marginRight="20dp" 

            android:textSize="16sp" /> 
    </LinearLayout>   
    <View 
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="#474747" /> 
        
</LinearLayout>